@@ -1,5 +1,10 @@
 2009-02-11  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/opensubtitles/opensubtitles.py: Add 50-odd
+	languages supported by Opensubtitles (Closes: #571132)
+
+2009-02-11  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-object.c: Fix retval type (gboolean, not int)
 
 2009-02-11  Philip Withnall  <philip@tecnocode.co.uk>
